--- a/features/mask-type.yml
+++ b/features/mask-type.yml
@@ -1,5 +1,5 @@
 name: mask-type
-description: The `mask-type` CSS property on an SVG `<mask>` sets whether the mask is a `luminance` or `alpha` mask.
+description: The `mask-type` CSS property on an SVG `<mask>` element sets whether the mask is a `luminance` or `alpha` mask.
 spec: https://drafts.fxtf.org/css-masking-1/#the-mask-type
 group: clipping-shapes-masking
 compat_features:
