--- a/features/clip-path-animatable.yml
+++ b/features/clip-path-animatable.yml
@@ -1,5 +1,5 @@
 name: Animatable clipping paths
-description: Clipping paths in CSS are animated using CSS transitions and animations.
+description: The `clip-path` property can be animated using CSS transitions and animations.
 spec: https://drafts.fxtf.org/css-masking-1/#the-clip-path
 group: clipping-shapes-masking
 compat_features:
