Include full declaration in description

--- a/features/font-family-system.yml
+++ b/features/font-family-system.yml
@@ -1,5 +1,5 @@
 name: System font
-description: The generic `system-ui` font keyword for `font-family` refers to the operating system default interface font.
+description: The `font-family:\ system-ui` CSS declaration uses the operating system default font for text.
 spec: https://drafts.csswg.org/css-fonts-4/#system-ui-def
 caniuse: font-family-system-ui
 compat_features:
