--- a/features/font-family-math.yml
+++ b/features/font-family-math.yml
@@ -1,5 +1,5 @@
 name: Math font family
-description: The generic `math` font keyword for `font-family` refers to the browser default font face for displaying mathematical expressions.
+description: The `font-family:\ math` CSS declaration uses the browser default font face for displaying mathematical expressions.
 spec: https://drafts.csswg.org/css-fonts-4/#math-def
 compat_features:
   - css.properties.font-family.math
