--- a/features/clip-path.yml
+++ b/features/clip-path.yml
@@ -1,5 +1,5 @@
 name: clip-path
-description: The `clip-path` CSS property and SVG attribute sets the visible area of an element. Everything outside the area will be hidden.
+description: The `clip-path` CSS property and SVG attribute set the visible area of an element. Everything outside the area will be hidden.
 spec: https://drafts.fxtf.org/css-masking-1/#the-clip-path
 # caniuse groups more clip-path features and tells a spottier support story.
 # caniuse: css-clip-path
