--- a/features/motion-path.yml.dist
+++ b/features/motion-path.yml.dist
@@ -117,12 +117,15 @@ compat_features:
   #   safari_ios: "17.2"
   - css.types.ray.position
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-09-16
   # support:
   #   chrome: "116"
   #   chrome_android: "116"
   #   edge: "116"
   #   firefox: "122"
   #   firefox_android: "122"
+  #   safari: "18"
+  #   safari_ios: "18"
   - css.properties.offset-path.basic_shape
   - css.properties.offset-path.coord_box
