--- a/.github/workflows/gh-pages-build-deploy.yml
+++ b/.github/workflows/gh-pages-build-deploy.yml
@@ -7,8 +7,9 @@ on:
     branches:
       - "main"
     paths:
-      - "gh-pages/**"
-      - ".github/workflows/gh-pages-build-deploy.yml"
+      - "gh-pages/**" # Rebuild when any of the pages are updated.
+      - ".github/workflows/gh-pages-build-deploy.yml" # Rebuild when this file is updated.
+      - "packages/web-features/package.json"  # Rebuild when a new package is released.
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -41,6 +42,7 @@ jobs:
         with:
           cache: npm
           node-version-file: .node-version
+          cache-dependency-path: gh-pages/package-lock.json
       - name: NPM Install
         run: npm ci
         working-directory: gh-pages/
