--- a/features/notifications.yml
+++ b/features/notifications.yml
@@ -4,7 +4,11 @@
 # - "notifications api": ditto
 # - "notifications": ditto, but even more general
 #
+# MDN: Notifications API
+# CIU: Web Notifications
+#
 # Going with the generally preferred pattern of not including "web".
+#
 name: Notifications API
 
 # Description reasoning
