add feature composition discussion

--- a/features/notifications.yml
+++ b/features/notifications.yml
@@ -1,3 +1,12 @@
+# Feature composition notes
+#
+# Discussion and reasoning here:
+#
+# https://github.com/web-platform-dx/web-features/issues/973
+#
+# Disambiguations:
+# - Push (aka Web Push / Push API / Push Notifications)
+
 # Feature name reasoning
 #
 # - "web notifications": very common, but searches also show Web Push
