--- a/features/cubic-bezier-easing.yml
+++ b/features/cubic-bezier-easing.yml
@@ -1,5 +1,5 @@
 name: cubic-bezier() easing
-description: The `cubic-bezier()` easing function interpolates from 0-1 along a smooth curve influenced by two control points, used to create animations and transitions with continuous changes in speed. The `ease`, `ease-in`, `ease-out`, and `ease-in-out` CSS properties are presets for common scenarios.
+description: The cubic-bezier() easing function interpolates along a smooth curve, creating animations and transitions with continuous changes in speed. The ease, ease-in, ease-out, and ease-in-out CSS properties are presets for common scenarios.
 spec: https://drafts.csswg.org/css-easing-2/#cubic-bezier-easing-functions
 group: css
 compat_features:
