--- a/features/masks.yml.dist
+++ b/features/masks.yml.dist
@@ -16,8 +16,17 @@ compat_features:
   - css.properties.mask
   - css.properties.mask-clip
   - css.properties.mask-composite
+  - css.properties.mask-composite.add
+  - css.properties.mask-composite.exclude
+  - css.properties.mask-composite.intersect
+  - css.properties.mask-composite.subtract
   - css.properties.mask-image
+  - css.properties.mask-image.multiple_mask_images
+  - css.properties.mask-image.svg_masks
   - css.properties.mask-mode
+  - css.properties.mask-mode.alpha
+  - css.properties.mask-mode.luminance
+  - css.properties.mask-mode.match-source
   - css.properties.mask-origin
   - css.properties.mask-position
   - css.properties.mask-repeat
