--- a/features/transform-box.yml
+++ b/features/transform-box.yml
@@ -1,5 +1,5 @@
 name: transform-box
-description: The `transform-box` CSS property sets the reference box for transformations.
+description: The `transform-box` CSS property sets the position and dimensions, or reference box, relative to which transformations are calculated.
 spec: https://drafts.csswg.org/css-transforms-1/#transform-box
 compat_features:
   - css.properties.transform-box
