--- a/features/column-span.yml
+++ b/features/column-span.yml
@@ -1,5 +1,5 @@
 name: column-span
-description: The `column-span` CSS property allows a child element to disply across all columns of a multi-column parent.
+description: The `column-span` CSS property displays a child element across all columns of a multi-column parent.
 spec: https://drafts.csswg.org/css-multicol-1/#spanning-columns
 group: layout
 compat_features:
