make storage group, add it to the features

--- a/features/indexeddb.yml
+++ b/features/indexeddb.yml
@@ -1,6 +1,7 @@
 name: Indexed Database API 3.0
 description: TODO
 spec: https://w3c.github.io/IndexedDB/
+group: storage
 compat_features:
   - api.IDBCursor
   - api.IDBCursor.advance
