--- a/features/shared-storage.yml
+++ b/features/shared-storage.yml
@@ -1,6 +1,7 @@
 name: Shared Storage API
 description: TODO
 spec: https://wicg.github.io/shared-storage/
+group: storage
 compat_features:
   - api.HTMLIFrameElement.sharedStorageWritable
   - api.HTMLImageElement.sharedStorageWritable
