--- a/features/storage-manager.yml
+++ b/features/storage-manager.yml
@@ -4,6 +4,7 @@
 name: Storage Manager
 description: TODO
 spec: https://storage.spec.whatwg.org/
+group: storage
 compat_features:
   - api.StorageManager
   - api.StorageManager.estimate
