--- a/features/storage.yml
+++ b/features/storage.yml
@@ -4,5 +4,6 @@
 name: Storage
 description: TODO
 spec: https://storage.spec.whatwg.org/
+group: storage
 compat_features:
   - api.Navigator.storage
