--- a/features/requeststorageaccessfor.yml
+++ b/features/requeststorageaccessfor.yml
@@ -1,6 +1,7 @@
 name: requestStorageAccessFor API
 description: TODO
 spec: https://privacycg.github.io/requestStorageAccessFor/
+group: storage
 compat_features:
   - api.Document.requestStorageAccessFor
   - api.Permissions.permission_top-level-storage-access
