--- a/features/storage-access.yml
+++ b/features/storage-access.yml
@@ -1,3 +1,4 @@
 name: Storage access
 description: The `document.requestStorageAccess()` method allows content in iframes to request storing and reading cookies and other site data, while the `document.hasStorageAccess()` method checks if such access is granted.
 spec: https://privacycg.github.io/storage-access/
+group: storage
