--- a/features/column-span.yml
+++ b/features/column-span.yml
@@ -1,7 +1,7 @@
 name: column-span
 description: The `column-span` CSS property displays a child element across all columns of a multi-column parent.
 spec: https://drafts.csswg.org/css-multicol-1/#spanning-columns
-group: layout
+group: multi-column
 compat_features:
   - css.properties.column-span
   - css.properties.column-span.all
