--- a/features/multi-column.yml
+++ b/features/multi-column.yml
@@ -1,8 +1,9 @@
 name: Multi-column layout
-description: Multi-column layout flows an element's content across one or more vertical content areas in a single row, without affecting the `display` properties of its children.
+description: Multi-column layout flows an element's content across one or more content areas in a single row, without affecting the `display` properties of its children.
 spec: https://drafts.csswg.org/css-multicol-1/
-group: layout
-caniuse: multicolumn
+group: multi-column
+status:
+  compute_from: css.properties.columns
 compat_features:
   - css.properties.align-content.multicol_context
   - css.properties.column-count
