--- a/features/fetch-metadata.yml
+++ b/features/fetch-metadata.yml
@@ -1,3 +1,3 @@
 name: Fetch metadata request headers
-description: The `Sec-Fetch-Dest`, `Sec-Fetch-Mode, `Sec-Fetch-Site`, and `Sec-Fetch-User` HTTP headers provide extra information about the way a request was made, to help servers reject certain kinds of malicious requests.
+description: The `Sec-Fetch-Dest`, `Sec-Fetch-Mode`, `Sec-Fetch-Site`, and `Sec-Fetch-User` HTTP headers provide extra information about the way a request was made, to help servers reject certain kinds of malicious requests.
 spec: https://w3c.github.io/webappsec-fetch-metadata/
