--- a/features/font-size.yml
+++ b/features/font-size.yml
@@ -1,5 +1,5 @@
 name: font-size
-description: The `font-size` CSS property sets the text size.
+description: The `font-size` CSS property sets the text height.
 spec: https://drafts.csswg.org/css-fonts-4/#font-size-prop
 group: fonts
 status:
