--- a/features/font-stretch.yml
+++ b/features/font-stretch.yml
@@ -1,5 +1,6 @@
 name: font-stretch
-description: The `font-stretch` CSS property selects a font face from a font family based on width, either by a keyword such as "condensed" or a percentage. The `font-stretch` property will be replaced by `font-width`.
+description: The `font-stretch` CSS property selects a font face from a font family based on width, either by a keyword such as `condensed` or a percentage.
+# Note: `font-stretch` will become an alias to `font-width`: https://drafts.csswg.org/css-fonts/#font-stretch-desc
 spec: https://drafts.csswg.org/css-fonts-4/#font-stretch-prop
 group: fonts
 caniuse: css-font-stretch
