--- a/features/font-family-system.yml
+++ b/features/font-family-system.yml
@@ -1,5 +1,5 @@
 name: System font
-description: The `font-family:\ system-ui` CSS declaration uses the operating system default font for text.
+description: "The `font-family: system-ui` CSS declaration uses the operating system default font for text."
 spec: https://drafts.csswg.org/css-fonts-4/#system-ui-def
 caniuse: font-family-system-ui
 compat_features:
