--- a/features/intl-duration-format.yml.dist
+++ b/features/intl-duration-format.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "129"
     chrome_android: "129"
+    edge: "129"
     safari: "16.4"
     safari_ios: "16.4"
 compat_features:
