--- a/features/scheduler.yml.dist
+++ b/features/scheduler.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "129"
     chrome_android: "129"
+    edge: "129"
 compat_features:
   # baseline: false
   # support:
@@ -29,4 +30,5 @@ compat_features:
   # support:
   #   chrome: "129"
   #   chrome_android: "129"
+  #   edge: "129"
   - api.Scheduler.yield
