--- a/features/draft/spec/compute-pressure.yml.dist
+++ b/features/draft/spec/compute-pressure.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "129"
     chrome_android: "129"
+    edge: "129"
 compat_features:
   - webdriver.commands.CreateVirtualPressureSource
   - webdriver.commands.DeleteVirtualPressureSource
