--- a/features/hyphens.yml
+++ b/features/hyphens.yml
@@ -1,7 +1,7 @@
 name: Hyphenation
 # The description should be revisited when support notes are added.
 # https://github.com/web-platform-dx/web-features/issues/915
-description: The `hyphens` CSS property controls when long words are broken by line wrapping. Although called `hyphens`, the property applies to word-splitting behavior across languages, such as customary spelling changes or the use of other characters. Support for non-English languages varies signficantly.
+description: The `hyphens` CSS property controls when long words are broken by line wrapping. Although called `hyphens`, the property applies to word-splitting behavior across languages, such as customary spelling changes or the use of other characters. Support for non-English languages varies significantly.
 spec: https://drafts.csswg.org/css-text-3/#hyphens-property
 caniuse: css-hyphens
 group: css
