--- a/features/cascade-layers.yml
+++ b/features/cascade-layers.yml
@@ -1,6 +1,6 @@
 name: Cascade layers
 description: The `@layer` CSS at-rule avoids specificity conflicts by providing priority levels for different groups of CSS rules, such as low-priority styles like resets, and high-priority styles like UI components.
-spec: https://www.w3.org/TR/css-cascade-5/#layering
+spec: https://drafts.csswg.org/css-cascade-5/
 group: css
 caniuse: css-cascade-layers
 compat_features:
