--- a/features/inherit-value.yml
+++ b/features/inherit-value.yml
@@ -1,5 +1,5 @@
 name: inherit
-description: The `inherit` keyword can be applied to any CSS property, to 'inherit' the computed value of that property from the parent element.
+description: The `inherit` keyword resets any CSS property to the computed value of that property from the parent element.
 spec: https://www.w3.org/TR/css-cascade/#inherit
 caniuse: css-inherit-value
 compat_features:
