--- a/features/revert-value.yml
+++ b/features/revert-value.yml
@@ -1,5 +1,5 @@
 name: revert
-description: The `revert` CSS keyword resets any property to its previous default, provided by either the user or browser stylesheets. For example, setting `display:/ revert` on a `<div>` will likely result in `display:block`, the browser default style. This is often confused with `initial`.
+description: "The `revert` CSS keyword resets any property to its previous default, provided by either the user or browser stylesheets. For example, setting `display: revert` on a `<div>` will likely result in `display: block`, the browser default style. This is often confused with `initial`."
 spec: https://www.w3.org/TR/css-cascade/#default
 caniuse: css-revert-value
 compat_features:
