Use draft specs, and add explicit-defaults group

--- a/features/inherit-value.yml
+++ b/features/inherit-value.yml
@@ -1,6 +1,6 @@
 name: inherit
 description: The `inherit` keyword resets any CSS property to the computed value of that property from the parent element.
-spec: https://www.w3.org/TR/css-cascade/#inherit
-caniuse: css-inherit-value
+group: explicit-defaults
+spec: https://drafts.csswg.org/css-cascade-3/#inherit
 compat_features:
   - css.types.global_keywords.inherit
