--- a/features/imagebitmap.yml
+++ b/features/imagebitmap.yml
@@ -1,5 +1,5 @@
 name: ImageBitmap
-description: The `ImageBitmap` interface represents a bitmap image which can be created from a variety of source objects. It can be drawn to a <canvas> without undue latency, and provides an asynchronous and resource efficient pathway to prepare textures for rendering in WebGL.
+description: The `createImageBitmap()` global method creates an `ImageBitmap` object from a source such as an image, SVG, blob, or canvas. An `ImageBitmap` object represents pixel data that can be drawn to a canvas with lower latency than other types, such as `ImageData`.
 spec: https://html.spec.whatwg.org/multipage/imagebitmap-and-animations.html#imagebitmap
 status:
   compute_from: api.ImageBitmap
