--- a/features/imagebitmap.yml
+++ b/features/imagebitmap.yml
@@ -1,4 +1,4 @@
-name: ImageBitmap
+name: createImageBitmap
 description: The `createImageBitmap()` global method creates an `ImageBitmap` object from a source such as an image, SVG, blob, or canvas. An `ImageBitmap` object represents pixel data that can be drawn to a canvas with lower latency than other types, such as `ImageData`.
 spec: https://html.spec.whatwg.org/multipage/imagebitmap-and-animations.html#imagebitmap
 status:
