--- a/features/webauthn.yml
+++ b/features/webauthn.yml
@@ -17,6 +17,14 @@ compat_features:
   - api.CredentialsContainer.create.publicKey_option
   - api.CredentialsContainer.create.publicKey_option.extensions
   - api.CredentialsContainer.create.publicKey_option.extensions.appidExclude
+  - api.CredentialsContainer.create.publicKey_option.extensions.credProps
+  - api.CredentialsContainer.create.publicKey_option.extensions.credProtect
+  - api.CredentialsContainer.create.publicKey_option.extensions.largeBlob
+  - api.CredentialsContainer.create.publicKey_option.extensions.minPinLength
+  - api.CredentialsContainer.create.publicKey_option.extensions.payment
+  - api.CredentialsContainer.create.publicKey_option.requireResidentKey
+  - api.CredentialsContainer.create.publicKey_option.residentKey
+  - api.CredentialsContainer.get.publicKey_option.extensions.largeBlob
   - api.CredentialsContainer.get.publicKey_option
   - api.CredentialsContainer.get.publicKey_option.extensions
   - api.CredentialsContainer.get.publicKey_option.extensions.appid
