--- a/features/capture-stream-audio-video.yml
+++ b/features/capture-stream-audio-video.yml
@@ -1,5 +1,5 @@
 name: captureStream() for <audio> and <video>
-description: The `captureStream()` method for `<audio>` and `<video>` elements returns a MediaStream object which is streaming a real-time capture of the content being rendered in the media element.
+description: The `captureStream()` method for `<audio>` and `<video>` elements returns a `MediaStream` for the media element's content. You can use this to record media or send it elsewhere, such as a canvas or WebRTC connection.
 spec: https://w3c.github.io/mediacapture-fromelement/#html-media-element-media-capture-extensions
 group: media-elements
 compat_features:
