Add transform-box and add missing transform properties (#1695)

--- a/features/individual-transforms.yml
+++ b/features/individual-transforms.yml
@@ -1,4 +1,11 @@
 name: Individual transform properties
-description: Transform elements with separate `translate`, `rotate`, and `scale` CSS properties.
+description: The `translate`, `rotate`, and `scale` CSS properties apply simple transformations independently, as opposed to applying multiple transformations with the `transform` CSS property.
 spec: https://drafts.csswg.org/css-transforms-2/#individual-transforms
 group: transforms
+compat_features:
+  - css.properties.rotate
+  - css.properties.scale
+  - css.properties.translate
+  - css.properties.rotate.none
+  - css.properties.scale.none
+  - css.properties.translate.none
