--- a/features/clipboard-svg.yml
+++ b/features/clipboard-svg.yml
@@ -1,5 +1,5 @@
-name: Async clipboard support for SVG
-description: Support for the `image/svg+xml` mime-type in the `navigator.clipboard` API allows you to read and write SVG data in the system clipboard.
+name: SVG clipboard items
+description: The `image/svg+xml` data type (also known as the MIME type) for `ClipboardItem` objects represents SVG data written to or read from the clipboard.
 spec: https://w3c.github.io/clipboard-apis/#optional-data-types-x
 group: clipboard
 compat_features:
