Split outlines and outline

--- a/features/border-radius.yml
+++ b/features/border-radius.yml
@@ -2,6 +2,8 @@ name: border-radius
 description: The `border-radius` CSS property rounds the corners of the border drawn around an element.
 spec: https://drafts.csswg.org/css-backgrounds-3/#corners
 caniuse: border-radius
+status:
+  compute_from: css.properties.border-radius
 group: borders-outlines
 compat_features:
   - css.properties.border-bottom-left-radius
