--- a/features/outlines.yml
+++ b/features/outlines.yml
@@ -1,9 +1,8 @@
 name: Outlines
-description: The `outline` CSS property sets the color, style, and width of a line around an element, outside of the border. The `outline-offset` CSS property sets the distance from the element's edge to the outline.
+description: The `outline-color`, `outline-style`, and `outline-width` and `outline-offset` CSS properties style a line around an element, outside of the border.
 spec: https://drafts.csswg.org/css-ui-4/#outline
-status:
-  # The `outline` shorthand was introduced at a later date.
-  compute_from: css.properties.outline-style
+# TODO: Caniuse support is close but would need to be reconciled.
+# caniuse: outline
 compat_features:
   - css.properties.outline-color
   - css.properties.outline-offset
@@ -19,4 +18,3 @@ compat_features:
   - css.properties.outline-style.ridge
   - css.properties.outline-style.solid
   - css.properties.outline-width
-  - css.properties.outline
