--- a/features/path-shape.yml
+++ b/features/path-shape.yml
@@ -1,5 +1,5 @@
-name: "`path()` shape"
-description: The `path()` CSS shape function creates an shapes for use with `clip-path`, `shape-outside`, and the `d` property on an SVG.
+name: path()
+description: The `path()` CSS shape function creates a shape for `clip-path`, `shape-outside`, and the SVG attribute `d`.
 spec: https://drafts.csswg.org/css-shapes-1/#supported-basic-shapes
 # group: clipping-shapes-masking
 compat_features:
