--- a/features/gamepad.yml
+++ b/features/gamepad.yml
@@ -1,6 +1,6 @@
 name: gamepad
 description: The Gamepad API allows developers to seamlessly interface with game controllers in web apps.
-spec: https://w3c.github.io/gamepad
+spec: https://w3c.github.io/gamepad/
 caniuse: gamepad
 group: gamepad
 status:
