--- a/features/remote-playback.yml
+++ b/features/remote-playback.yml
@@ -1,6 +1,6 @@
 name: Remote Playback
 description: The Remote Playback API allows webpages to initiate and control playback of media on connected remote devices, such as smart TVs with AirPlay or Chromecast capabilities.
-spec: https://w3c.github.io/remote-playback
+spec: https://w3c.github.io/remote-playback/
 status:
   compute_from: api.RemotePlayback
 compat_features:
