--- a/features/font-loading.yml
+++ b/features/font-loading.yml
@@ -1,6 +1,6 @@
 name: CSS Font Loading
 description: The CSS Font Loading API allows web developers to dynamically load custom fonts via JavaScript interfaces.
-spec: https://drafts.csswg.org/css-font-loading
+spec: https://drafts.csswg.org/css-font-loading-3/
 status:
   compute_from: api.FontFace
 compat_features:
