--- a/features/geometry.yml
+++ b/features/geometry.yml
@@ -1,6 +1,6 @@
 name: Geometry Level 1
 description: The Geometry interfaces offer a way to represent points, rectangles, quadrilaterals and transformation matrices within JavaScript.
-spec: https://drafts.fxtf.org/geometry
+spec: https://drafts.fxtf.org/geometry-1/
 status:
   compute_from: api.DOMMatrix
 compat_features:
