--- a/features/capture-stream-canvas.yml
+++ b/features/capture-stream-canvas.yml
@@ -7,6 +7,8 @@ description: The `captureStream()` method for `<canvas>` elements returns a `Med
 # See also: https://bugzil.la/1231131
 spec: https://w3c.github.io/mediacapture-fromelement/#html-canvas-element-media-capture-extensions
 group: canvas
+status:
+  compute_from: api.HTMLCanvasElement.captureStream
 compat_features:
   - api.CanvasCaptureMediaStreamTrack
   - api.CanvasCaptureMediaStreamTrack.canvas
