--- a/features/vertical-form-controls.yml
+++ b/features/vertical-form-controls.yml
@@ -1,5 +1,5 @@
 name: Vertical form controls
-description: Vertical form controls display elements in a form, such as radios, progress bars, or selects, vertically when the writing mode is `vertical-lr` or `vertical-rl`
+description: The `writing-mode` property orients form elements (such as radio buttons, progress bars, or select menus) vertically when the writing mode is `vertical-lr` or `vertical-rl`.
 group: css
 spec: https://drafts.csswg.org/css-writing-modes-4/#vertical-modes
 compat_features:
