--- a/features/font-loading.yml
+++ b/features/font-loading.yml
@@ -1,9 +1,11 @@
-name: CSS Font Loading
-description: The CSS Font Loading API allows web developers to dynamically load custom fonts via JavaScript interfaces.
+name: Font loading
+description: The CSS Font Loading API dynamically loads custom fonts and tracks when fonts are loading or ready to use.
 spec: https://drafts.csswg.org/css-font-loading-3/
+caniuse: font-loading
 status:
   compute_from: api.FontFace
 compat_features:
+  - api.Document.fonts
   - api.FontFace
   - api.FontFace.FontFace
   - api.FontFace.worker_support
