Apply suggestions from code review
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/battery.yml
+++ b/features/battery.yml
@@ -1,5 +1,5 @@
-name: Battery Status
-description: The Battery Status API allows web developers to obtain information about the device's battery, including charge level and status.
+name: Battery status
+description: The `navigator.getBattery()` API obtains information about the device's battery, including charge level and status. Also known as the Battery API.
 spec: https://w3c.github.io/battery/
 status:
   compute_from: api.BatteryManager
