--- a/features/console.yml
+++ b/features/console.yml
@@ -1,5 +1,5 @@
 name: Console
-description: To write...
+description: The `console` API logs debugging messages to the browser development tools' console.
 spec: https://console.spec.whatwg.org/#console-namespace
 group: html-elements
 status:
