Apply suggestions from code review
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/gamepad-extensions.yml
+++ b/features/gamepad-extensions.yml
@@ -1,4 +1,4 @@
-name: gamepad
+name: Gamepad extensions
 description: The Gamepad Extensions API allows developers to seamlessly interface with gamepad-like devices with advanced capabilities, such as controllers for XR headsets.
 spec: https://w3c.github.io/gamepad/extensions.html
 group: gamepad
