--- a/features/gamepad-haptics.yml
+++ b/features/gamepad-haptics.yml
@@ -1,5 +1,5 @@
-name: gamepad-haptics
-description: The gamepad haptics interfaces allow developers to control the vibration motors in gamepads.
+name: Gamepad haptic feedback
+description: The `gamepad.vibrationActuator` property represents a gamepad's haptics hardware, which allows you to control the vibration motors in a gamepad.
 spec: https://w3c.github.io/gamepad/#gamepadhapticactuator-interface
 group: gamepad
 status:
