--- a/features/gamepad.yml
+++ b/features/gamepad.yml
@@ -1,5 +1,5 @@
-name: gamepad
-description: The Gamepad API allows developers to seamlessly interface with game controllers in web apps.
+name: Gamepad
+description: The Gamepad API accesses and responds to signals from game controllers in web pages.
 spec: https://w3c.github.io/gamepad/
 caniuse: gamepad
 group: gamepad
