--- a/features/font-loading.yml.dist
+++ b/features/font-loading.yml.dist
@@ -26,6 +26,7 @@ compat_features:
   #   firefox_android: "41"
   #   safari: "10"
   #   safari_ios: "10"
+  - api.Document.fonts
   - api.FontFace
   - api.FontFace.FontFace
   - api.FontFace.family
