Address description feedback

--- a/features/multi-column.yml
+++ b/features/multi-column.yml
@@ -1,5 +1,5 @@
 name: Multi-column layout
-description: Multi-column layout flows an element's content across one or more content areas in a single row, without affecting the `display` properties of its children.
+description: Multi-column layout flows an element's content across one or more columns in a single row, without affecting the `display` property of its children.
 spec: https://drafts.csswg.org/css-multicol-1/
 group: multi-column
 status:
