--- a/features/widows-orphans.yml
+++ b/features/widows-orphans.yml
@@ -1,4 +1,4 @@
-name: widows and orphans
+name: Widows and orphans
 description: The `widows` and `orphans` CSS properties set the minimum lines included in a text fragment created by page, column, or region breaks.
 spec: https://drafts.csswg.org/css-break-4/#widows-orphans
 group: layout
