--- a/features/background-repeat.yml
+++ b/features/background-repeat.yml
@@ -2,6 +2,7 @@ name: background-repeat
 description: The `background-repeat` CSS property sets how a background image is tiled.
 spec: https://drafts.csswg.org/css-backgrounds-3/#background-repeat
 caniuse: background-repeat-round-space
+group: background
 compat_features:
   - css.properties.background-repeat
   - css.properties.background-repeat.multiple_backgrounds
