--- a/features/image-orientation.yml
+++ b/features/image-orientation.yml
@@ -1,5 +1,5 @@
 name: image-orientation
-description: The `image-orientation` CSS property corrects the rotation of an image using the image's metadata, for instance EXIF.
+description: The `image-orientation` CSS property corrects the rotation of an image using the image's metadata, such as EXIF.
 spec: https://drafts.csswg.org/css-images-3/#the-image-orientation
 caniuse: css-image-orientation
 group: images
