--- a/features/crisp-edges.yml
+++ b/features/crisp-edges.yml
@@ -1,7 +1,6 @@
 name: crisp-edges
-description: "The `image-rendering: crisp-edges` CSS value scales images to preserve lines without blurring."
+description: "The `image-rendering: crisp-edges` CSS declaration scales images to preserve lines without blurring."
 spec: https://drafts.csswg.org/css-images-3/#the-image-rendering
-caniuse: css-crisp-edges
-group: image-rendering
+group: image-scaling
 compat_features:
   - css.properties.image-rendering.crisp-edges
