--- a/features/image-rendering.yml
+++ b/features/image-rendering.yml
@@ -1,7 +1,8 @@
 name: image-rendering
 description: The `image-rendering` CSS property sets how images are scaled, retaining smoothness for photos, or hard edges for pixel art and QR codes.
 spec: https://drafts.csswg.org/css-images-3/#the-image-rendering
-group: image-rendering
+caniuse: css-crisp-edges
+group: image-scaling
 compat_features:
   - css.properties.image-rendering
   - css.properties.image-rendering.auto
