--- a/features/draft/spec/css-cascade-6.yml
+++ b/features/draft/spec/css-cascade-6.yml
@@ -7,7 +7,6 @@ compat_features:
   - css.types.global_keywords.inherit
   - css.types.global_keywords.initial
   - css.types.global_keywords.revert
-  - css.types.global_keywords.revert-layer
   - css.types.global_keywords.unset
 
 # The following features in the spec are already part of web-features:
@@ -18,6 +17,7 @@ compat_features:
 #   - api.CSSLayerStatementRule.nameList
 #   - css.at-rules.import.layer
 #   - css.at-rules.layer
+#   - css.types.global_keywords.revert-layer
 # - @scope:
 #   - api.CSSScopeRule
 #   - api.CSSScopeRule.end
