--- a/features/color-scheme.yml.dist
+++ b/features/color-scheme.yml.dist
@@ -39,6 +39,9 @@ compat_features:
   #   safari: "13"
   #   safari_ios: "13"
   - css.properties.color-scheme
+  - css.properties.color-scheme.dark
+  - css.properties.color-scheme.light
+  - css.properties.color-scheme.normal
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: high
