--- a/features/box-decoration-break.yml
+++ b/features/box-decoration-break.yml
@@ -1,5 +1,5 @@
 name: box-decoration-break
-description: The `box-decoration-break` CSS property sets whether the box decoration of an element divided across a page, column, or region wraps each fragment or is split across the break.
+description: The `box-decoration-break` CSS property sets whether box decorations, such as borders or backgrounds, of an element divided across a page, column, or region wraps each fragment or splits across the break.
 spec: https://drafts.csswg.org/css-break-4/#break-decoration
 caniuse: css-boxdecorationbreak
 compat_features:
