--- a/features/overscroll-behavior.yml
+++ b/features/overscroll-behavior.yml
@@ -1,5 +1,5 @@
 name: overscroll-behavior
-description: The `overscroll-behavior` CSS property sets the behavior when the edges of a scrolling area are reached. The `contain` keyword prevents scroll chaining, and the `none` keyword prevents scroll chaining, bouncing effects, and device specific behaviors like scroll to refresh.
+description: The `overscroll-behavior` CSS property allows disabling default scrolling behaviors when the edges of a scrolling area are reached.
 spec: https://drafts.csswg.org/css-overscroll-1/
 caniuse: css-overscroll-behavior
 group: scrolling
