--- a/features/counter-reset-reversed.yml
+++ b/features/counter-reset-reversed.yml
@@ -1,5 +1,5 @@
 name: Reversed counter-reset
-description: "The `reversed()` CSS function is used with `counter-reset` to create a counter that counts down."
+description: "The `reversed()` CSS function for `counter-reset` creates a counter that counts down."
 spec: https://drafts.csswg.org/css-lists-3/#css-counter-reversed
 group: counters
 compat_features:
