--- a/features/list-style.yml
+++ b/features/list-style.yml
@@ -1,5 +1,5 @@
 name: List style
-description: The `list-style` CSS and the `list-style-image`, `list-style-position`, and `list-style-type` longhands style the marker for a list item.
+description: The `list-style` shorthand CSS property and the `list-style-image`, `list-style-position`, and `list-style-type` longhand properties set the position and appearance of a list item's marker.
 spec: https://drafts.csswg.org/css-lists-3/#list-style-property
 group: lists
 status:
