Take Ink Enhancement feature out of draft

--- a/features/ink-enhancement.yml
+++ b/features/ink-enhancement.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
-name: Ink API
-description: TODO
+name: Ink enhancement
+description: The Ink API allows browsers to directly make use of available OS-level compositors when drawing pen strokes in an inking app feature, thereby reducing latency and increasing performance.
 spec: https://wicg.github.io/ink-enhancement/
 compat_features:
   - api.Ink
