Use API entry point in the description

--- a/features/font-loading.yml
+++ b/features/font-loading.yml
@@ -1,5 +1,5 @@
 name: Font loading
-description: The CSS Font Loading API dynamically loads custom fonts and tracks when fonts are loading or ready to use.
+description: The `document.fonts` API dynamically loads custom fonts and tracks when fonts are loading or ready to use.
 spec: https://drafts.csswg.org/css-font-loading-3/
 caniuse: font-loading
 status:
