--- a/features/draft/html-api/dedicatedworkerglobalscope.yml
+++ b/features/draft/html-api/dedicatedworkerglobalscope.yml
@@ -1,5 +1,5 @@
 name: DedicatedWorkerGlobalScope
-description: The DedicatedWorkerGlobalScope object (the Worker global scope) is accessible through the self keyword. Some additional global functions, namespaces objects, and constructors, not typically associated with the worker global scope, but available on it, are listed in the JavaScript Reference. See also: Functions available to workers.
+description: The DedicatedWorkerGlobalScope object (the Worker global scope) is accessible through the self keyword. Some additional global functions, namespaces objects, and constructors, not typically associated with the worker global scope, but available on it, are listed in the JavaScript Reference.
 spec: https://html.spec.whatwg.org/multipage/workers.html#dedicated-workers-and-the-dedicatedworkerglobalscope-interface
 #caniuse:
 group: html-api
