--- a/features/magnetometer.yml
+++ b/features/magnetometer.yml
@@ -1,5 +1,5 @@
 name: Magnetometer
-description: The magnetometer API grants access to the device magnetometer.
+description: The `Magnetometer` API reads magnetic field sensor data from the device's magnetometer.
 spec: https://w3c.github.io/magnetometer/
 group: sensors
 compat_features:
