Add file-selector-button, before, after

--- a/features/placeholder.yml
+++ b/features/placeholder.yml
@@ -1,7 +1,7 @@
 name: ::placeholder
 description: The `::placeholder` CSS pseudo-element sets the styles on text in `<input>` and `<textarea>` elements when no value is set.
 spec: https://drafts.csswg.org/css-pseudo-4/#placeholder-pseudo
-caniuse: https://caniuse.com/css-placeholder
+caniuse: css-placeholder
 group: selectors
 compat_features:
   - css.selectors.placeholder
