--- a/features/marker.yml
+++ b/features/marker.yml
@@ -1,5 +1,5 @@
 name: ::marker
-description: The `::marker` CSS pseudo-element selects the font, text, and color of a list item marker.
+description: The `::marker` CSS pseudo-element selects list item markers for styling numbers or bullets.
 spec: https://drafts.csswg.org/css-pseudo-4/#marker-pseudo
 caniuse: css-marker-pseudo
 group: lists
