--- a/features/before-after.yml
+++ b/features/before-after.yml
@@ -1,5 +1,5 @@
 name: ::before and ::after
-description: The `::before` and `::after` CSS pseudo-elements set styles of the first and last children of an element. They often are used to add 4
+description: The `::before` and `::after` CSS pseudo-elements selects the first and last children of an element for styling, and are often used with the `content` property to add generated cosmetic content.
 spec: https://drafts.csswg.org/css-pseudo-4/#generated-content
 caniuse: css-gencontent
 status:
