--- a/features/first-letter.yml
+++ b/features/first-letter.yml
@@ -1,5 +1,5 @@
 name: ::first-letter
-description: The `::first-letter` CSS pseudo-element sets the styles of the first letter in an element.
+description: The `::first-letter` CSS pseudo-element selects the first letter in an element for styling.
 spec: https://drafts.csswg.org/css-pseudo-4/#first-letter-pseudo
 group: selectors
 caniuse: css-first-letter
