--- a/features/first-line.yml
+++ b/features/first-line.yml
@@ -1,5 +1,5 @@
 name: ::first-line
-description: The `::first-line` CSS pseudo-element sets the styles of the first line of text in an element.
+description: The `::first-line` CSS pseudo-element selects the first line of text in an element for styling.
 spec: https://drafts.csswg.org/css-pseudo-4/#first-line-pseudo
 group: selectors
 caniuse: css-first-line
