--- a/features/placeholder-shown.yml
+++ b/features/placeholder-shown.yml
@@ -1,5 +1,5 @@
 name: :placeholder-shown
-description: The `:placeholder-shown` CSS pseudo-element sets the styles on `<input>` and `<textarea>` elements when no value is set and placeholder text is shown.
+description: The `:placeholder-shown` CSS pseudo-element selects `<input>` and `<textarea>` elements when no value is set and placeholder text is shown.
 spec: https://drafts.csswg.org/selectors-4/#placeholder
 caniuse: css-placeholder-shown
 group: selectors
