--- a/features/placeholder.yml
+++ b/features/placeholder.yml
@@ -1,5 +1,5 @@
 name: ::placeholder
-description: The `::placeholder` CSS pseudo-element sets the styles on text in `<input>` and `<textarea>` elements when no value is set.
+description: The `::placeholder` CSS pseudo-element selects text in `<input>` and `<textarea>` elements when no value is set.
 spec: https://drafts.csswg.org/css-pseudo-4/#placeholder-pseudo
 caniuse: css-placeholder
 group: selectors
