--- a/features/selection.yml
+++ b/features/selection.yml
@@ -1,5 +1,5 @@
 name: ::selection
-description: The `::selection` CSS pseudo-element sets styles on the text a user has highlighted.
+description: The `::selection` CSS pseudo-element selects text a user has highlighted.
 spec: https://drafts.csswg.org/css-pseudo-4/#selectordef-selection
 caniuse: css-selection
 group: selectors
