Fix renamed key

--- a/features/draft/spec/mathml-core.yml
+++ b/features/draft/spec/mathml-core.yml
@@ -25,7 +25,7 @@ compat_features:
   - mathml.elements.mo.lspace
   - mathml.elements.mo.maxsize
   - mathml.elements.mo.minsize
-  - mathml.elements.mo.moveablelimits
+  - mathml.elements.mo.movablelimits
   - mathml.elements.mo.rspace
   - mathml.elements.mo.stretchy
   - mathml.elements.mo.symmetric
