--- a/features/draft/spec/mathml-core.yml.dist
+++ b/features/draft/spec/mathml-core.yml.dist
@@ -123,7 +123,7 @@ compat_features:
   #   firefox_android: "4"
   #   safari: "10"
   #   safari_ios: "10"
-  - mathml.elements.mo.moveablelimits
+  - mathml.elements.mo.movablelimits
   - mathml.elements.mover.accent
   - mathml.elements.mpadded.depth
   - mathml.elements.mpadded.height
