Add missing aspect-ratio.auto

--- a/features/aspect-ratio.yml.dist
+++ b/features/aspect-ratio.yml.dist
@@ -53,3 +53,4 @@ compat_features:
   #   safari: "15"
   #   safari_ios: "15"
   - css.properties.aspect-ratio
+  - css.properties.aspect-ratio.auto
