--- a/features/draft/spec/css-grid-2.yml.dist
+++ b/features/draft/spec/css-grid-2.yml.dist
@@ -3,16 +3,16 @@
 
 status:
   baseline: high
-  baseline_low_date: ≤2020-03-24
-  baseline_high_date: ≤2022-09-24
+  baseline_low_date: 2020-01-15
+  baseline_high_date: 2022-07-15
   support:
     chrome: "57"
     chrome_android: "57"
     edge: "79"
     firefox: "52"
     firefox_android: "52"
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    safari: "10.1"
+    safari_ios: "10.3"
 compat_features:
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -40,6 +40,7 @@ compat_features:
   #   safari_ios: "10"
   - css.properties.column-gap.multicol_context
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
@@ -51,6 +52,9 @@ compat_features:
   #   firefox_android: "52"
   #   safari: "10.1"
   #   safari_ios: "10.3"
+  - css.properties.grid-auto-flow.column
+  - css.properties.grid-auto-flow.dense
+  - css.properties.grid-auto-flow.row
   - css.properties.grid-template-areas.none
   - css.properties.grid-template-columns.auto
   - css.properties.grid-template-columns.max-content
@@ -61,19 +65,3 @@ compat_features:
   - css.properties.grid-template-rows.min-content
   - css.properties.grid-template-rows.none
   - css.properties.grid-template.none
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: high
-  # baseline_low_date: ≤2020-03-24
-  # baseline_high_date: ≤2022-09-24
-  # support:
-  #   chrome: "57"
-  #   chrome_android: "57"
-  #   edge: "79"
-  #   firefox: "52"
-  #   firefox_android: "52"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
-  - css.properties.grid-auto-flow.column
-  - css.properties.grid-auto-flow.dense
-  - css.properties.grid-auto-flow.row
