--- a/features/width-height.yml
+++ b/features/width-height.yml
@@ -1,4 +1,4 @@
-name: width and height
+name: Width and height
 description: The `width` and `height` CSS properties set the preferred physical size of an element.
 spec: https://drafts.csswg.org/css-sizing-3/#preferred-size-properties
 group: layout
