--- a/features/grid.yml.dist
+++ b/features/grid.yml.dist
@@ -126,6 +126,31 @@ compat_features:
   #   edge: "79"
   #   firefox: "52"
   #   firefox_android: "52"
+  #   safari: "10.1"
+  #   safari_ios: "10.3"
+  - css.properties.grid-auto-flow.column
+  - css.properties.grid-auto-flow.dense
+  - css.properties.grid-auto-flow.row
+  - css.properties.grid-template-areas.none
+  - css.properties.grid-template-columns.auto
+  - css.properties.grid-template-columns.max-content
+  - css.properties.grid-template-columns.min-content
+  - css.properties.grid-template-columns.none
+  - css.properties.grid-template-rows.auto
+  - css.properties.grid-template-rows.max-content
+  - css.properties.grid-template-rows.min-content
+  - css.properties.grid-template-rows.none
+  - css.properties.grid-template.none
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "57"
+  #   chrome_android: "57"
+  #   edge: "79"
+  #   firefox: "52"
+  #   firefox_android: "52"
   #   safari: "11"
   #   safari_ios: "11"
   - css.properties.align-items.grid_context.start_end
