Apply suggestion to padding.yml description
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/padding.yml
+++ b/features/padding.yml
@@ -1,5 +1,5 @@
 name: padding
-description: The `padding` CSS property sets space between an element's edge and its contents. It provides a shorthand for `padding-top`, `padding-right`, `padding-bottom`, and `padding-left`.
+description: The `padding` CSS property sets space between an element's edge and its contents. It is a shorthand for `padding-top`, `padding-right`, `padding-bottom`, and `padding-left`.
 spec: https://drafts.csswg.org/css-box-4/#paddings
 group: layout
 compat_features:
