--- a/features/grid.yml
+++ b/features/grid.yml
@@ -1,8 +1,10 @@
 name: Grid
-description: CSS Grid is a two-dimensional layout system, which lays content out in rows and columns.
+description: CSS grid is a two-dimensional layout system, which lays content out in rows and columns.
 spec: https://drafts.csswg.org/css-grid-3/
 group: grid
 caniuse: css-grid
+status:
+  compute_from: css.properties.grid
 compat_features:
   - css.types.flex
   - css.properties.align-content.grid_context
