Applies suggestion to margin.yml description
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/margin.yml
+++ b/features/margin.yml
@@ -1,5 +1,5 @@
 name: margin
-description: The `margin` CSS property sets space surrounding an element, and is a shorthand for `margin-top`, `margin-right`, `margin-bottom`, and `margin-left`.
+description: The `margin` CSS property sets space around an element. It is a shorthand for `margin-top`, `margin-right`, `margin-bottom`, and `margin-left`.
 spec: https://drafts.csswg.org/css-box-4/#margins
 group: layout
 compat_features:
