--- a/features/page-breaks.yml
+++ b/features/page-breaks.yml
@@ -1,8 +1,10 @@
 name: Page breaks
 description: The `break-after`, `break-before`, `break-inside` CSS properties (along with `page-break-` aliases) control where printed pages start and end. Also known as pagination or page breaking.
-spec: https://drafts.csswg.org/css-break-3/#breaking-controls
+spec: https://drafts.csswg.org/css-break-4/#breaking-controls
 group: layout
 caniuse: css-page-break
+status:
+  compute_from: css.properties.break-inside.avoid-page
 compat_features:
   - css.properties.break-after
   - css.properties.break-after.always
