--- a/features/before-after.yml
+++ b/features/before-after.yml
@@ -1,5 +1,5 @@
 name: ::before and ::after
-description: The `::before` and `::after` CSS pseudo-elements select the first and last children of an element for styling, and are often used with the `content` property to add generated cosmetic content.
+description: The `::before` and `::after` CSS pseudo-elements select inline boxes preceding and following an element. They are often used with the `content` property to generate cosmetic content.
 spec: https://drafts.csswg.org/css-pseudo-4/#generated-content
 caniuse: css-gencontent
 status:
