Updates compute_from for more consistent reporting

--- a/features/page-breaks.yml
+++ b/features/page-breaks.yml
@@ -4,7 +4,7 @@ spec: https://drafts.csswg.org/css-break-4/#breaking-controls
 group: layout
 caniuse: css-page-break
 status:
-  compute_from: css.properties.break-inside.avoid-page
+  compute_from: css.properties.page-break-after.avoid
 compat_features:
   - css.properties.break-after
   - css.properties.break-after.always
