--- a/features/page-setup.yml
+++ b/features/page-setup.yml
@@ -1,13 +1,14 @@
 name: Page setup
-description: The `@page` rule sets the page-specific dimensions, orientation, and margins for content such as printed documents, ebooks, or slides.
+description: The `@page` rule sets the page-specific dimensions, and margins for content such as printed documents, ebooks, or slides.
 spec: https://drafts.csswg.org/css-page-3/#at-page-rule
 group:
   - layout
   - print
 caniuse: css-paged-media
+status:
+  compute_from: css.at-rules.page.size
 compat_features:
   - css.at-rules.page
-  - css.at-rules.page.page-orientation
   - css.at-rules.page.size
   - css.at-rules.page.size.jis-b4
   - css.at-rules.page.size.jis-b5
